# jam-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  combined.sketch  fastadata.fasta  output.sketch  output2.sketch
.github/workflows/: codecov.yaml  push.yaml  release.yaml
benches/: benchmarks.rs
src/: cli.rs  compare.rs  file_io.rs  hash_functions.rs  hasher.rs  heed.rs  heed_codec.rs  lib.rs  main.rs  signature.rs  sketch.rs  sketcher.rs  varintencoding.rs
tests/: hash_statistics.rs  sketching.rs
tests/testfiles/: short.fa  test.short.fa.sourmash_k33.sig  test.small.fa
