[package]
name = "jam-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/St4NNi/jam-rs"
license = "MIT"
description = "Just another minhash (Jam) implementation in Rust"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
flate2 = "1.0.27"
needletail = "0.5.1"
rayon = "1.7.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"]}
bytemuck = "1.13.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
fastmurmur3 = {version = "0.2.0"} 
sourmash = "0.11.0"
serde_json = "1.0.105"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
murmurhash3 = {version = "0.0.5"}

[[bench]]
name = "benchmarks"
harness = false
