[package]
name = "jam-rs"
version = "0.1.0-beta.2"
edition = "2021"
repository = "https://github.com/St4NNi/jam-rs"
license = "MIT"
authors = ["Sebastian Beyvers <sebastian.beyvers@cb.jlug.de>"]
description = "Just another (genomic) minhash (Jam) implementation in Rust"
keywords = ["minhash", "metagenomics", "bioinformatics", "containment", "jaccard"]
categories = ["command-line-utilities", "science", "algorithms"]
exclude=["/tests"]
readme = "README.md"


[[bin]]
name = "jam"
path = "src/main.rs"

[lib]
name = "jam_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
flate2 = "1.0.33"
needletail = "0.5.1"
rayon = "1.10.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"]}
bytemuck = "1.18.0"
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.5.18", features = ["derive"] }
fastmurmur3 = {version = "0.2.0"} 
sourmash = "0.15.1"
serde_json = "1.0.128"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
murmurhash3 = {version = "0.0.5"}

[[bench]]
name = "benchmarks"
harness = false